--- a/FlaskApp/requirements.txt
+++ b/FlaskApp/requirements.txt
@@ -1,4 +1,4 @@
-Cython==0.29.36
-Flask==1.1.2
-pandas==0.24.2
-scikit-learn==0.20.3
+Flask==3.0.3
+pandas==2.2.2
+scikit-learn==1.5.1
+joblib==1.4.2
